# Maas2

./: .dockerignore  .env  .env.example  .gitignore  Arquitectura propuesta.md  Dockerfile  Dockerfile.backend  Especificación del Flujo.md  Estructura del Proyecto.md  PHASE_2_TOOLS.md  Prd Sistema Multiagente.md  README.md  Sad Sistema Multiagente.md  agentops.env  docker-compose.yml  docker_pull_retry.sh  inspect_agno.py  package-lock.json  pyproject.toml
backend/: main.py  start.sh
backend/agents/: author_agent.py  base.py  context_broker.py  data_ingestor.py  delivery_agents.py  extractor_agent.py  micro_planner.py  persist_agent.py  planner_agent.py  reviewer_agent.py
backend/core/: config.py  llm_gateway.py  logging.py  monitoring.py  redis_client.py
backend/knowledge/: template_manager.py
backend/routers/: admin.py  openwebui.py
backend/schemas/: models.py  payloads.py  redmine.py  tool_outputs.py
backend/services/: ui_templates.py
backend/tests/: analyze_tests.py  mock_model.py  run_tests.py  test_agent_os_integration.py  test_agents.py  test_api_openwebui.py  test_author_agent.py  test_planner_agent.py  test_redmine_client.py  test_redmine_extractor.py  test_redmine_extractor_complete.py  test_reviewer_agent.py  test_schemas.py  test_templates.py  test_tools.py  test_workflow.py
backend/workflows/: document_creation_workflow.py
maas_document_system/: docker-compose.yml  requirements.txt
maas_document_system/agents/: author_agent.py  base.py  planner_agent.py  reviewer_agent.py
maas_document_system/app/: api_admin.py  api_openwebui.py  (+2 more)
(+48 files in other folders)
