[project]
name = "maas-document-system"
version = "0.1.0"
description = "Enterprise MAAS Document System using Agno"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "agno[ollama,openai]>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "pyjwt>=2.9.0",
    "agentops>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
